--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "grunt-notify": "latest",
     "mocha": "^2.0.1",
     "supertest": "^0.14.0",
-    "uglifyify": "latest"
+    "uglifyify": "latest",
+    "react": "^0.12.0",
+    "reactify": "^0.15.2"
   },
   "browserify-shim": {
     "jquery": "global:$"
