Linked bootstrap in stylus

--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   ],
   "dependencies": {
     "jquery": "latest",
-    "leaflet": "latest"
+    "leaflet": "latest",
+    "bootstrap-stylus": "~3.3.0"
   }
 }
