--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "uglifyify": "latest",
     "react": "^0.12.0",
     "reactify": "^0.15.2"
+    "react-router": "^0.10.2",
   },
   "browserify-shim": {
     "jquery": "global:$"
