--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "supertest": "^0.14.0",
     "uglifyify": "latest",
     "react": "^0.12.0",
-    "reactify": "^0.15.2"
-    "react-router": "^0.10.2",
+    "reactify": "^0.15.2",
+    "react-router": "^0.10.2"
   },
   "browserify-shim": {
     "jquery": "global:$"
